*SVN*

* Tweak template format rules so that the ACCEPT header is only used if it's text/javascript.  This is so ajax actions without a :format param get recognized as Mime::JS. [Rick]

* The default respond_to blocks don't set a specific extension anymore, so that both 'show.rjs' and 'show.js.rjs' will work. [Rick]

* Allow layouts with extension of .html.erb.  Closes #8032 [Josh Knowles]

* Change default respond_to templates for xml and rjs formats. [Rick]

  * Default xml template goes from #{action_name}.rxml => #{action_name}.xml.builder.
  * Default rjs template goes from #{action_name}.rjs => #{action_name}.js.rjs.
  
  You can still specify your old templates:
  
    respond_to do |format|
      format.xml do
        render :action => "#{action_name}.rxml"
      end
    end

* Fix WSOD due to modification of a formatted template extension so that requests to templates like 'foo.html.erb' fail on the second hit.  [Rick]

* Fix WSOD when template compilation fails [Rick]

* Change ActionView template defaults.  Look for templates using the request format first, such as "show.html.erb" or "show.xml.builder", before looking for the old defaults like "show.erb" or "show.builder" [Rick]

* Highlight helper highlights one or many terms in a single pass.  [Jeremy Kemper]

* Dropped the use of ; as a separator of non-crud actions on resources and went back to the vanilla slash. It was a neat idea, but lots of the non-crud actions turned out not to be RPC (as the ; was primarily intended to discourage), but legitimate sub-resources, like /parties/recent, which didn't deserve the uglification of /parties;recent. Further more, the semicolon caused issues with caching and HTTP authentication in Safari. Just Not Worth It [DHH]

* Added that FormTagHelper#submit_tag will return to its original state if the submit fails and you're using :disable_with [DHH]

* Cleaned up, corrected, and mildly expanded ActionPack documentation.  Closes #7190 [jeremymcanally]
